--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "./build/three.module.js"
+                "three": "https://unpkg.com/three@0.138.3/build/three.module.js"
             }
         }
     </script>
