--- a/public/parte1/index.html
+++ b/public/parte1/index.html
@@ -11,21 +11,19 @@
             margin: 0;
         }
     </style>
-    <!--<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="importmap">
         {
             "imports": {
                 "three": "https://unpkg.com/three@0.138.3/build/three.module.js",
                 "orbitcontrols": "https://unpkg.com/three@0.138.3/examples/jsm/controls/OrbitControls.js",
-                "stats": ,
-                "gui"
+                "stats": "https://unpkg.com/three@0.138.3/examples/jsm/libs/stats.module.js",
+                "gui": "https://unpkg.com/three@0.138.3/examples/jsm/libs/lil-gui.module.min.js"
             }
         }
-    </script>-->
+    </script>
 </head>
 <body>
-    <!--<script type="module" src="parte2/client.js"></script>-->
-    <a href="parte1">parte 1</a>
-    <a href="parte2">parte 2</a>
+    <script type="module" src="rgb.js"></script>
 </body>
 </html>
