--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,6 @@
     </script>
 </head>
 <body>
-    <script type="module" src="rgb.js"></script>
+    <script type="module" src=""></script>
 </body>
 </html>
